<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>Wurfel Engine</name>
	<groupId>com.bombinggames.wurfelengine</groupId>
	<artifactId>wurfelengine-core</artifactId>
	<version>1.8.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<description>Wurfel Engine is an open source 2.5D isometric Java game engine.</description>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/BSVogler/WurfelEngineSDK/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<id>bsvogler</id>
			<name>Benedikt S. Vogler</name>
			<email>e-mail@benediktvogler.de</email>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>galegofer</id>
			<name>Damian Fernandez</name>
			<email>ing.damianfernandez@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/BSVogler/WurfelEngineSDK</url>
		<connection>scm:git:git://github.com/BSVogler/WurfelEngineSDK.git</connection>
		<developerConnection>scm:git:git://github.com/BSVogler/WurfelEngineSDK.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<libGdxVersion>1.9.6</libGdxVersion>
		<gdxControllerNativesUrl>http://libgdx.badlogicgames.com/nightlies/dist/extensions/gdx-controllers</gdxControllerNativesUrl>
		<gdxNativesUrl>http://libgdx.badlogicgames.com/nightlies/dist</gdxNativesUrl>
	</properties>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx -->
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx</artifactId>
			<version>${libGdxVersion}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-backend-lwjgl -->
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-backend-lwjgl3</artifactId>
			<version>${libGdxVersion}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-platform -->
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-platform</artifactId>
			<version>${libGdxVersion}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-ai -->
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-ai</artifactId>
			<version>1.6.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<!-- get all project dependencies -->
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<!-- MainClass in mainfest make a executable jar -->
					<archive>
						<manifest>
							<mainClass>com.bombinggames.wurfelengine.DesktopLauncher</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>create-my-bundle</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit4</artifactId>
						<version>2.19.1</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-XstartOnFirstThread</argLine>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>**/*IntegrationTest.java</exclude>
						<exclude>**/BaseTest.java</exclude>
						<exclude>**/BaseClientTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>maven-download-plugin</artifactId>
				<version>1.1.0</version>
				<executions>
					<execution>
						<id>natives</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>wget</goal>
						</goals>
						<configuration>
							<cacheDirectory>${project.build.directory}/download-cache</cacheDirectory>
							<url>${gdxNativesUrl}/gdx-natives.jar</url>
							<unpack>true</unpack>
							<outputDirectory>${project.build.directory}/natives</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.build.directory}/natives</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
		</resources>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.12.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>
